Fixed alignment issues

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -120,6 +120,7 @@ h2 {
 
 .recommended-report-cards {
   display: flex;
+  justify-content: space-between;
   padding-bottom: 8px; // Temp fix for container height too small for child's shadow.
   padding-left: 2px; //  Temp fix for container width too small for child's shadow.
   scroll-behavior: smooth;
@@ -142,7 +143,6 @@ h2 {
 
 app-recommended-report-card {
   width: 100%;
-  margin-right: 24px;
 
   /*Margin bottom after wrapping*/
   @media all and (min-width: 768px) {
